--- a/spell_checker_main.ipynb
+++ b/spell_checker_main.ipynb
@@ -737,7 +737,8 @@
     "\n",
     "After cleaning up the data, I have found that their are a lot of '\\n' or '\\r' in the text file. If I replace them by the ' '(space) character, there will be a lot of ' '(space) in the files. However, if I totally replaced them by ''(None), there will be some words connectd together. The reason is that some original words is seperated by '\\r\\n' rather than ' '(space) character. \n",
     "\n",
-    "Otherwise, on the top of each file, there is a short description about the story. However, there is not a standard description for every file. It is hard to set a function to remove this part. "
+    "Otherwise, on the top of each file, there is a short description about the story. However, there is not a standard description for every file. It is hard to set a function to remove this part.\n",
+    "\n"
    ]
   },
   {
