--- a/ELI_data_frame.ipynb
+++ b/ELI_data_frame.ipynb
@@ -506,17 +506,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class_id</th>\n",
+       "      <th>class_description</th>\n",
+       "      <th>class_abbreviation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Reading</td>\n",
+       "      <td>r</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Writing</td>\n",
+       "      <td>w</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Speaking</td>\n",
+       "      <td>s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Listening</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Grammar</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   class_id class_description class_abbreviation\n",
+       "0         1           Reading                  r\n",
+       "1         2           Writing                  w\n",
+       "2         3          Speaking                  s\n",
+       "3         4         Listening                  l\n",
+       "4         5           Grammar                  g"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_document = pd.read_csv(\"./data/INDEX.class.csv\")\n",
+    "df_document.head(10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_info_id</th>\n",
+       "      <th>file_info_description</th>\n",
+       "      <th>file_info_abbreviation</th>\n",
+       "      <th>file_format</th>\n",
+       "      <th>author_type_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Sample Sound Record</td>\n",
+       "      <td>s</td>\n",
+       "      <td>wav</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Transcript</td>\n",
+       "      <td>t</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Notes</td>\n",
+       "      <td>n</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Corretion</td>\n",
+       "      <td>c</td>\n",
+       "      <td>wav</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Teacher Notes</td>\n",
+       "      <td>tn</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Feedback</td>\n",
+       "      <td>f</td>\n",
+       "      <td>wav</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Student Notes</td>\n",
+       "      <td>sn</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Paragraph Writing</td>\n",
+       "      <td>pw</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Fill-in-the-blank</td>\n",
+       "      <td>f-b</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Sentence Completion</td>\n",
+       "      <td>sc</td>\n",
+       "      <td>txt</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   file_info_id file_info_description file_info_abbreviation file_format  \\\n",
+       "0             1   Sample Sound Record                      s         wav   \n",
+       "1             2            Transcript                      t         txt   \n",
+       "2             3                 Notes                      n         txt   \n",
+       "3             4             Corretion                      c         wav   \n",
+       "4             5         Teacher Notes                     tn         txt   \n",
+       "5             6              Feedback                      f         wav   \n",
+       "6             7         Student Notes                     sn         txt   \n",
+       "7             8     Paragraph Writing                     pw         txt   \n",
+       "8             9     Fill-in-the-blank                    f-b         txt   \n",
+       "9            10   Sentence Completion                     sc         txt   \n",
+       "\n",
+       "   author_type_id  \n",
+       "0               1  \n",
+       "1               1  \n",
+       "2               1  \n",
+       "3               1  \n",
+       "4               2  \n",
+       "5               2  \n",
+       "6               1  \n",
+       "7               1  \n",
+       "8               1  \n",
+       "9               1  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_document = pd.read_csv(\"./data/INDEX.file_information.csv\")\n",
+    "df_document.head(10)"
+   ]
   },
   {
    "cell_type": "code",
