--- a/ELI_data_frame.ipynb
+++ b/ELI_data_frame.ipynb
@@ -1216,6 +1216,302 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linguistic Analysis\n",
+    "#### 1. Text length as token count\n",
+    "- Let's count text length\n",
+    "- In this part, nltk.word_tokenize return errors caused by the wrong input first. That is because some text is stored in \"float\" type, and word_tokenize only accepts \"string\" format. I have to set every text into \"string\" format first, then utilize word_tokenize()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTokens2(txt):\n",
+    "    txt = str(txt)\n",
+    "    x = nltk.word_tokenize(txt)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eli['tokens'] = df_eli.text.map(getTokens2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>question_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>native_language</th>\n",
+       "      <th>question</th>\n",
+       "      <th>tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>eq0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I met my friend Nife while I was studying in a...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Arabic</td>\n",
+       "      <td>Write a paragraph  about a relatioship that is...</td>\n",
+       "      <td>[I, met, my, friend, Nife, while, I, was, stud...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>am8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Ten years ago, I met a women on the train betw...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>Write a paragraph  about a relatioship that is...</td>\n",
+       "      <td>[Ten, years, ago, ,, I, met, a, women, on, the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dk5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>In my country we usually don't use tea bags. F...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Turkish</td>\n",
+       "      <td>In five sentences or less, give instructions o...</td>\n",
+       "      <td>[In, my, country, we, usually, do, n't, use, t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dk5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>I organized the instructions by time.</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Turkish</td>\n",
+       "      <td>How do you organize the instructions: by time,...</td>\n",
+       "      <td>[I, organized, the, instructions, by, time, .]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ad1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>First, prepare a port, loose tea, and cup.\\nSe...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Korean</td>\n",
+       "      <td>In five sentences or less, give instructions o...</td>\n",
+       "      <td>[First, ,, prepare, a, port, ,, loose, tea, ,,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  student_id  question_id                                               text  \\\n",
+       "0        eq0            5  I met my friend Nife while I was studying in a...   \n",
+       "1        am8            5  Ten years ago, I met a women on the train betw...   \n",
+       "2        dk5           12  In my country we usually don't use tea bags. F...   \n",
+       "3        dk5           13              I organized the instructions by time.   \n",
+       "4        ad1           12  First, prepare a port, loose tea, and cup.\\nSe...   \n",
+       "\n",
+       "   gender native_language                                           question  \\\n",
+       "0    Male          Arabic  Write a paragraph  about a relatioship that is...   \n",
+       "1  Female            Thai  Write a paragraph  about a relatioship that is...   \n",
+       "2  Female         Turkish  In five sentences or less, give instructions o...   \n",
+       "3  Female         Turkish  How do you organize the instructions: by time,...   \n",
+       "4  Female          Korean  In five sentences or less, give instructions o...   \n",
+       "\n",
+       "                                              tokens  \n",
+       "0  [I, met, my, friend, Nife, while, I, was, stud...  \n",
+       "1  [Ten, years, ago, ,, I, met, a, women, on, the...  \n",
+       "2  [In, my, country, we, usually, do, n't, use, t...  \n",
+       "3     [I, organized, the, instructions, by, time, .]  \n",
+       "4  [First, ,, prepare, a, port, ,, loose, tea, ,,...  "
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>question_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>native_language</th>\n",
+       "      <th>question</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>token_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>eq0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I met my friend Nife while I was studying in a...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Arabic</td>\n",
+       "      <td>Write a paragraph  about a relatioship that is...</td>\n",
+       "      <td>[I, met, my, friend, Nife, while, I, was, stud...</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>am8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Ten years ago, I met a women on the train betw...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>Write a paragraph  about a relatioship that is...</td>\n",
+       "      <td>[Ten, years, ago, ,, I, met, a, women, on, the...</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dk5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>In my country we usually don't use tea bags. F...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Turkish</td>\n",
+       "      <td>In five sentences or less, give instructions o...</td>\n",
+       "      <td>[In, my, country, we, usually, do, n't, use, t...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dk5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>I organized the instructions by time.</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Turkish</td>\n",
+       "      <td>How do you organize the instructions: by time,...</td>\n",
+       "      <td>[I, organized, the, instructions, by, time, .]</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ad1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>First, prepare a port, loose tea, and cup.\\nSe...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Korean</td>\n",
+       "      <td>In five sentences or less, give instructions o...</td>\n",
+       "      <td>[First, ,, prepare, a, port, ,, loose, tea, ,,...</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  student_id  question_id                                               text  \\\n",
+       "0        eq0            5  I met my friend Nife while I was studying in a...   \n",
+       "1        am8            5  Ten years ago, I met a women on the train betw...   \n",
+       "2        dk5           12  In my country we usually don't use tea bags. F...   \n",
+       "3        dk5           13              I organized the instructions by time.   \n",
+       "4        ad1           12  First, prepare a port, loose tea, and cup.\\nSe...   \n",
+       "\n",
+       "   gender native_language                                           question  \\\n",
+       "0    Male          Arabic  Write a paragraph  about a relatioship that is...   \n",
+       "1  Female            Thai  Write a paragraph  about a relatioship that is...   \n",
+       "2  Female         Turkish  In five sentences or less, give instructions o...   \n",
+       "3  Female         Turkish  How do you organize the instructions: by time,...   \n",
+       "4  Female          Korean  In five sentences or less, give instructions o...   \n",
+       "\n",
+       "                                              tokens  token_count  \n",
+       "0  [I, met, my, friend, Nife, while, I, was, stud...          193  \n",
+       "1  [Ten, years, ago, ,, I, met, a, women, on, the...          152  \n",
+       "2  [In, my, country, we, usually, do, n't, use, t...           68  \n",
+       "3     [I, organized, the, instructions, by, time, .]            7  \n",
+       "4  [First, ,, prepare, a, port, ,, loose, tea, ,,...           74  "
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli['token_count'] = df_eli.tokens.map(len)\n",
+    "df_eli.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
