--- a/ELI_data_frame.ipynb
+++ b/ELI_data_frame.ipynb
@@ -37,7 +37,6 @@
     "from scipy import stats\n",
     "import seaborn as sns\n",
     "\n",
-    "\n",
     "# Turn off pretty printing \n",
     "%pprint"
    ]
@@ -46,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, check about answer.csv"
+    "- First, check about answer.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +210,7 @@
        "9                                            By time           0  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,14 +225,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I choose student_id(anon_id), question_id and text data to help me know the dataframe. Who write the essay with what kind of questions. \n",
+    "- I choose student_id(anon_id), question_id and text data to help me know the dataframe. Who write the essay with what kind of questions. \n",
     "\n",
-    "What we need are anon_id, question_id and text data."
+    "- What we need are anon_id, question_id and text data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +312,7 @@
        "4     ad1           12  First, prepare a port, loose tea, and cup.\\nSe..."
       ]
      },
-     "execution_count": 171,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,12 +328,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Second, check about student information"
+    "- Second, check about student information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +580,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,12 +595,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's merge student information"
+    "- Let's merge student information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +699,7 @@
        "4  Female          Korean  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +805,7 @@
        "4  Female          Korean  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,14 +820,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataframe looks great.\n",
+    "- The dataframe looks great.\n",
     "\n",
-    "How about adding question column?"
+    "- How about adding question column?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1006,7 @@
        "4     NaN           1          1           0        NaN       NaN  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,12 +1021,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select question_id and stem(question) only."
+    "- Select question_id and stem(question) only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1093,7 @@
        "4            5  Write a paragraph  about a relatioship that is..."
       ]
      },
-     "execution_count": 177,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,9 +1106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(46239, 6)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1205,15 +1211,283 @@
        "4  Female          Korean  In five sentences or less, give instructions o...  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_eli = pd.merge(df_eli, df_question_trim, on='question_id', how='left')\n",
+    "print(df_eli.shape)\n",
     "df_eli.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Since it is private data, I just choose sample data - about 500 to represent.\n",
+    "- Then store the data as a new csv file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_eli_short = df_eli.sample(500)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>question_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>native_language</th>\n",
+       "      <th>question</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12023</th>\n",
+       "      <td>ei8</td>\n",
+       "      <td>1841</td>\n",
+       "      <td>Resume</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Chinese</td>\n",
+       "      <td>In paragraphs 1-3, find a word or phrase that ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28582</th>\n",
+       "      <td>fy1</td>\n",
+       "      <td>3961</td>\n",
+       "      <td>I would like to have my dreams explained becau...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>Would you like to have your dreams interpreted...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10424</th>\n",
+       "      <td>di3</td>\n",
+       "      <td>1624</td>\n",
+       "      <td>categorize</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Arabic</td>\n",
+       "      <td>assert, categorize, testify</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18409</th>\n",
+       "      <td>ah8</td>\n",
+       "      <td>2630</td>\n",
+       "      <td>After experimentation,Helva discovered that sh...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>manipulate \\nto control something using the ha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8783</th>\n",
+       "      <td>dy7</td>\n",
+       "      <td>1399</td>\n",
+       "      <td>When I caught a cold, my body couldn't prevent...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Korean</td>\n",
+       "      <td>Describe a time when your immune system didn't...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      student_id  question_id  \\\n",
+       "12023        ei8         1841   \n",
+       "28582        fy1         3961   \n",
+       "10424        di3         1624   \n",
+       "18409        ah8         2630   \n",
+       "8783         dy7         1399   \n",
+       "\n",
+       "                                                    text  gender  \\\n",
+       "12023                                            Resume   Female   \n",
+       "28582  I would like to have my dreams explained becau...  Female   \n",
+       "10424                                         categorize    Male   \n",
+       "18409  After experimentation,Helva discovered that sh...    Male   \n",
+       "8783   When I caught a cold, my body couldn't prevent...  Female   \n",
+       "\n",
+       "      native_language                                           question  \n",
+       "12023         Chinese  In paragraphs 1-3, find a word or phrase that ...  \n",
+       "28582         Spanish  Would you like to have your dreams interpreted...  \n",
+       "10424          Arabic                        assert, categorize, testify  \n",
+       "18409           Other  manipulate \\nto control something using the ha...  \n",
+       "8783           Korean  Describe a time when your immune system didn't...  "
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df_eli_short.shape)\n",
+    "df_eli_short.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For the fair use, I have to eliminate personal information, so I just look through every text data. And mark the data with personal information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------\n",
+      "0\n",
+      "Resume \n",
+      "----------------------------\n",
+      "1\n",
+      "I would like to have my dreams explained because I think this could me help to understand things that happened in my life.\n",
+      "----------------------------\n",
+      "2\n",
+      "categorize\n",
+      "----------------------------\n",
+      "3\n",
+      "After experimentation,Helva discovered that she could manipulate her diaphragmatic unit to sustain tone. By relaxing the throat muscles and expanding the oral cavity well into the frontal sinuses, she could direct the vowel sounds into the\n",
+      "----------------------------\n",
+      "4\n",
+      "When I caught a cold, my body couldn't prevent infection therefore I took some antibiotics for a couple of days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print all data with index count, mark the data with personal information\n",
+    "# just print first 5 to represent\n",
+    "# mark index 58,129,231,256,377,432\n",
+    "count = 0\n",
+    "for x in df_eli_short.text[:5]:\n",
+    "    print('----------------------------')\n",
+    "    print(count)\n",
+    "    print(x)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Drop personal information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_eli_short = df_eli_short.drop(df_eli_short.index[[58,129,231,256,377,432]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It looks like the dataframe is good"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(494, 6)"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- save the file as sample data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_eli_short.to_csv(\"./data/df_eli_short.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
